--- a/website/docs/quick-start/v4/UniappCliStyle.mdx
+++ b/website/docs/quick-start/v4/UniappCliStyle.mdx
@@ -1,15 +1,18 @@
+import CssImportReminder from '@site/src/components/CssImportReminder'
 import UniAppUniScss from '../_UniAppUniScss.mdx'
 
-在 `src/app.css` 中引入 `weapp-tailwindcss`，这个文件会作为 `cssEntries` 的入口：
+在 `src/app.css` 中引入 `tailwindcss`，这个文件会作为 `cssEntries` 的入口：
 
 ```css title="src/app.css"
-@import "weapp-tailwindcss";
+@import "tailwindcss";
 ```
 
-为了解决 IDE 智能提示问题，再额外创建一个 `main.css` 并引入 `weapp-tailwindcss/css`。
+<CssImportReminder />
+
+为了解决 IDE 智能提示问题，再额外创建一个 `main.css` 并引入 `tailwindcss/css`。
 
 ```css title="src/main.css"
-@import "weapp-tailwindcss/css";
+@import "tailwindcss/css";
 @source not "dist";
 ```
 
