--- a/website/docs/quick-start/v4/tutorial/workflow.mdx
+++ b/website/docs/quick-start/v4/tutorial/workflow.mdx
@@ -107,7 +107,7 @@ Tailwind CSS 的核心不在于背公式，而是把 UI 拆成「布局」「排
 Tailwind 4 把主题抽象为原生 CSS 变量。你可以在 `app.css` 中集中维护令牌，再通过 `@theme` 输出：
 
 ```css title="src/app.css" {2-7}
-@import "weapp-tailwindcss";
+@import "tailwindcss";
 
 @theme {
   --color-brand: oklch(66% 0.21 268);
