--- a/website/docs/quick-start/v4/UniAppHbuilderShared.mdx
+++ b/website/docs/quick-start/v4/UniAppHbuilderShared.mdx
@@ -1,4 +1,5 @@
 import Patch from './patch.mdx'
+import CssImportReminder from '@site/src/components/CssImportReminder'
 import UniappHbuilderStyle from './UniappHbuilderStyle.mdx'
 
 ## 1. 安装
@@ -28,7 +29,7 @@ export default defineConfig({
       rem2rpx: true,
       tailwindcssBasedir: __dirname,
       cssEntries: [
-        // 你 @import "weapp-tailwindcss"; 那个文件绝对路径
+        // 你 @import "tailwindcss"; 那个文件绝对路径
         path.resolve(__dirname, './src/app.css'),
       ],
     }),
