--- a/website/docs/quick-start/v4/mpx.mdx
+++ b/website/docs/quick-start/v4/mpx.mdx
@@ -1,4 +1,5 @@
 import Patch from './patch.mdx'
+import CssImportReminder from '@site/src/components/CssImportReminder'
 
 # Mpx
 
@@ -50,7 +51,7 @@ module.exports = defineConfig({
         appType: 'mpx',
         rem2rpx: true,
         cssEntries: [
-          // 你 @import "weapp-tailwindcss"; 那个文件绝对路径
+          // 你 @import "tailwindcss"; 那个文件绝对路径
           path.resolve(__dirname, './src/app.css'),
         ],
       })
@@ -68,10 +69,12 @@ module.exports = defineConfig({
 在 `src/app.css` 中引入 `weapp-tailwindcss`：
 
 ```css title="src/app.css"
-@import "weapp-tailwindcss";
+@import "tailwindcss";
 ```
 
-> 💡 如果你希望在任意样式文件中直接引用包内样式，请使用 `@import "weapp-tailwindcss/index.css";`。这样可以确保 `postcss-import` 解析到的是真实的 CSS 资源，避免出现 “Unknown word "use strict"” 这一类由于误解析到 JS 文件导致的构建报错。
+<CssImportReminder />
+
+> 💡 如果你希望在任意样式文件中直接引用包内样式，请使用 `@import "weapp-tailwindcss/index.css";`。这样可以确保 `postcss-import` 解析到的是真实的 CSS 资源，避免出现 "Unknown word "use strict"" 这一类由于误解析到 JS 文件导致的构建报错。
 
 ### Tailwind CSS 样式引用指引
 
