--- a/website/docs/quick-start/v4/taro-webpack.mdx
+++ b/website/docs/quick-start/v4/taro-webpack.mdx
@@ -1,4 +1,5 @@
 import Patch from './patch.mdx'
+import CssImportReminder from '@site/src/components/CssImportReminder'
 
 # Taro webpack
 
@@ -25,8 +26,10 @@ export default {
 ### 在你的 `app.css` 里面添加
 
 ```css
-@import "weapp-tailwindcss";
+@import "tailwindcss";
 ```
+
+<CssImportReminder />
 
 ### 注册插件
 
@@ -55,7 +58,7 @@ import path from 'node:path'
               // 这里可以传参数
               rem2rpx: true,
               cssEntries: [
-                // 你 @import "weapp-tailwindcss"; 那个文件绝对路径
+                // 你 @import "tailwindcss"; 那个文件绝对路径
                 path.resolve(__dirname, '../src/app.css'),
               ],
             }],
