--- a/website/docs/quick-start/v4/uni-app-vite.mdx
+++ b/website/docs/quick-start/v4/uni-app-vite.mdx
@@ -1,4 +1,5 @@
 import Patch from './patch.mdx'
+import CssImportReminder from '@site/src/components/CssImportReminder'
 import UniappCliStyle from './UniappCliStyle.mdx'
 
 # uni-app cli vue3 vite
@@ -26,7 +27,7 @@ export default defineConfig({
     UnifiedViteWeappTailwindcssPlugin({
       rem2rpx: true,
       cssEntries: [
-        // 你 @import "weapp-tailwindcss"; 那个文件绝对路径
+        // 你 @import "tailwindcss"; 那个文件绝对路径
         path.resolve(import.meta.dirname, './src/app.css'),
       ],
     }),
