docs: update use case

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -4,7 +4,7 @@
 
 以下内容来自 [谁在使用 weapp-tailwindcss ？](https://github.com/sonofmagic/weapp-tailwindcss/issues/270)，列表顺序按照提交时间排序。
 
-> 最近同步：2025年11月17日 22:57
+> 最近同步：2025年12月31日 16:58
 
 <div className="grid grid-cols-1 gap-6 lg:grid-cols-2">
 <div className="rounded-2xl border border-gray-200 dark:border-gray-700 bg-white/70 dark:bg-gray-900/40 p-4 shadow-sm hover:shadow-md transition-shadow">
@@ -197,14 +197,33 @@ ChatGPT+通义千问+360智脑驱动的MBTI测试小程序,有了AI加持,我可
 用心开发 100 款小而美的大众工具
 
 <div className="grid grid-cols-1 sm:grid-cols-1 gap-3 mt-4">
-  <img loading="lazy" src="/img/showcase/010.小而美工具/01-image.png" alt="Image" className="h-64 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
+  <img loading="lazy" src="/img/showcase/010.小而美工具/01-image.jpg" alt="Image" className="h-64 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
 </div>
 <details className="mt-4 rounded-xl border border-gray-100 dark:border-gray-800 bg-gray-50/70 dark:bg-gray-900/30 p-3">
   <summary className="cursor-pointer list-none font-medium text-sm text-gray-600 dark:text-gray-300">📸 展开查看其余 2 张图片</summary>
   <div className="pt-3">
     <div className="grid grid-cols-2 sm:grid-cols-3 gap-3">
-      <img loading="lazy" src="/img/showcase/010.小而美工具/02-image-2.jpg" alt="小而美工具" className="h-48 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
-      <img loading="lazy" src="/img/showcase/010.小而美工具/03-image.jpg" alt="Image" className="h-48 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
+      <img loading="lazy" src="/img/showcase/010.小而美工具/02-image.png" alt="Image" className="h-48 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
+      <img loading="lazy" src="/img/showcase/010.小而美工具/03-image-3.jpg" alt="小而美工具" className="h-48 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
+    </div>
+  </div>
+</details>
+</div>
+<div className="rounded-2xl border border-gray-200 dark:border-gray-700 bg-white/70 dark:bg-gray-900/40 p-4 shadow-sm hover:shadow-md transition-shadow">
+
+### 元气番茄钟
+
+**提交者**：[@puppet-king](https://github.com/puppet-king) · 2025年12月31日 · [查看评论](https://github.com/sonofmagic/weapp-tailwindcss/issues/270#issuecomment-3701463750)  
+简约时尚的番茄工作法的计时工具
+
+<div className="grid grid-cols-1 sm:grid-cols-1 gap-3 mt-4">
+  <img loading="lazy" src="/img/showcase/011.元气番茄钟/01-image.jpg" alt="Image" className="h-64 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
+</div>
+<details className="mt-4 rounded-xl border border-gray-100 dark:border-gray-800 bg-gray-50/70 dark:bg-gray-900/30 p-3">
+  <summary className="cursor-pointer list-none font-medium text-sm text-gray-600 dark:text-gray-300">📸 展开查看其余 1 张图片</summary>
+  <div className="pt-3">
+    <div className="grid grid-cols-2 sm:grid-cols-3 gap-3">
+      <img loading="lazy" src="/img/showcase/011.元气番茄钟/02-image.jpg" alt="Image" className="h-48 w-full object-contain rounded-xl border border-gray-100 dark:border-gray-800" />
     </div>
   </div>
 </details>
