--- a/website/docs/community/merge/integration.mdx
+++ b/website/docs/community/merge/integration.mdx
@@ -4,6 +4,10 @@ title: 集成与排障指南
 description: '在真实项目中集成 @weapp-tailwindcss/merge 的注意事项，以及针对不同打包器的调试技巧。'
 ---
 
+:::tip 运行时包详解
+运行时包的完整 API 与多端 Demo 已整理在 [packages-runtime](/docs/community/packages-runtime) 章节。
+:::
+
 ## 与构建工具协作
 
 ### 保留关键函数名
