--- a/website/docs/community/packages-runtime/cva.mdx
+++ b/website/docs/community/packages-runtime/cva.mdx
@@ -51,12 +51,14 @@ const className = button({ tone: 'outline', size: 'sm' })
 ```ts
 import { create } from '@weapp-tailwindcss/cva'
 
-const { cva: cvaWeb } = create({
-  escape: false,
-  unescape: false,
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { cva: cvaRuntime } = create({
+  escape: !isH5,
+  unescape: !isH5,
 })
 
-const badge = cvaWeb('text-[#0F172A] bg-[#E2E8F0]')
+const badge = cvaRuntime('text-[#0F172A] bg-[#E2E8F0]')
 ```
 
 ## Demo：跨端变体工厂
@@ -77,8 +79,10 @@ const config = {
 }
 
 const pill = cva('inline-flex items-center rounded-full px-2 text-xs font-medium', config)
-const { cva: cvaWeb } = create({ escape: false, unescape: false })
-const pillWeb = cvaWeb('inline-flex items-center rounded-full px-2 text-xs font-medium', config)
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { cva: cvaRuntime } = create({ escape: !isH5, unescape: !isH5 })
+const pillWeb = cvaRuntime('inline-flex items-center rounded-full px-2 text-xs font-medium', config)
 ```
 
 ## 常见注意事项
