--- a/website/docs/community/packages-runtime/merge-v3.mdx
+++ b/website/docs/community/packages-runtime/merge-v3.mdx
@@ -26,12 +26,14 @@ const className = twMerge('p-2 p-4', 'bg-[#0F172A]')
 ```ts
 import { create } from '@weapp-tailwindcss/merge-v3'
 
-const { twMerge: twMergeWeb } = create({
-  escape: false,
-  unescape: false,
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { twMerge } = create({
+  escape: !isH5,
+  unescape: !isH5,
 })
 
-twMergeWeb('text-[#2563EB]', 'text-[#1D4ED8]')
+twMerge('text-[#2563EB]', 'text-[#1D4ED8]')
 // => 'text-[#1D4ED8]'
 ```
 
