--- a/website/docs/community/packages-runtime/merge.mdx
+++ b/website/docs/community/packages-runtime/merge.mdx
@@ -67,12 +67,14 @@ const buttonClass = twMerge(
 ```ts
 import { create } from '@weapp-tailwindcss/merge'
 
-const { twMerge: twMergeWeb } = create({
-  escape: false,
-  unescape: false,
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { twMerge } = create({
+  escape: !isH5,
+  unescape: !isH5,
 })
 
-const className = twMergeWeb('text-[#2563EB]', 'text-[#1D4ED8]')
+const className = twMerge('text-[#2563EB]', 'text-[#1D4ED8]')
 // => 'text-[#1D4ED8]'
 ```
 
