--- a/website/docs/community/packages-runtime/variants-v3.mdx
+++ b/website/docs/community/packages-runtime/variants-v3.mdx
@@ -49,12 +49,14 @@ const tvBase = createTV({ twMerge: false })
 ```ts
 import { create } from '@weapp-tailwindcss/variants-v3'
 
-const { tv: tvWeb } = create({
-  escape: false,
-  unescape: false,
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { tv } = create({
+  escape: !isH5,
+  unescape: !isH5,
 })
 
-const card = tvWeb({
+const card = tv({
   base: 'rounded-xl border border-[#E2E8F0] bg-white',
 })
 ```
@@ -78,8 +80,10 @@ const config = {
 }
 
 const button = tv(config)
-const { tv: tvWeb } = create({ escape: false, unescape: false })
-const buttonWeb = tvWeb(config)
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { tv: tvRuntime } = create({ escape: !isH5, unescape: !isH5 })
+const buttonWeb = tvRuntime(config)
 ```
 
 ## 常见注意事项
