--- a/website/docs/community/packages-runtime/variants.mdx
+++ b/website/docs/community/packages-runtime/variants.mdx
@@ -60,16 +60,18 @@ mergeLater({ twMerge: false }) // => 仅 escape，不合并
 ```ts
 import { create } from '@weapp-tailwindcss/variants'
 
-const { tv: tvWeb, cn: cnWeb } = create({
-  escape: false,
-  unescape: false,
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { tv, cn } = create({
+  escape: !isH5,
+  unescape: !isH5,
 })
 
-const card = tvWeb({
+const card = tv({
   base: 'rounded-xl border border-[#E2E8F0] bg-white',
 })
 
-const className = cnWeb('text-[#0F172A]', 'text-[#1E293B]')()
+const className = cn('text-[#0F172A]', 'text-[#1E293B]')()
 ```
 
 ## Demo：复用同一配置
@@ -91,8 +93,10 @@ const buttonConfig = {
 }
 
 const button = tv(buttonConfig)
-const { tv: tvWeb } = create({ escape: false, unescape: false })
-const buttonWeb = tvWeb(buttonConfig)
+// 跨平台框架请自行判断是否为 H5 构建，通常可从环境变量读取。
+const isH5 = true
+const { tv: tvRuntime } = create({ escape: !isH5, unescape: !isH5 })
+const buttonWeb = tvRuntime(buttonConfig)
 ```
 
 ## 常见注意事项
