--- a/website/docs/community/packages-runtime/variants-v3.mdx
+++ b/website/docs/community/packages-runtime/variants-v3.mdx
@@ -86,6 +86,25 @@ const { tv: tvRuntime } = create({ escape: !isH5, unescape: !isH5 })
 const buttonWeb = tvRuntime(config)
 ```
 
+## 默认 twMerge 配置
+
+```ts
+import { create } from '@weapp-tailwindcss/variants-v3'
+
+const { cn, tv } = create({
+  twMergeConfig: {
+    extend: {
+      classGroups: {
+        'font-size': [{ text: ['20', '22', '24', '26', '28', '30', '32'] }],
+      },
+    },
+  },
+})
+
+cn('text-32', 'text-surface-700')()
+tv({ base: 'text-32 text-surface-700' })()
+```
+
 ## 常见注意事项
 
 - **Tailwind v4**：请改用 [`@weapp-tailwindcss/variants`](./variants)。
